[gd_scene load_steps=28 format=3 uid="uid://cf01sje1yfyts"]

[ext_resource type="Texture2D" uid="uid://8ipjoehxki0a" path="res://Assets/home.png" id="1_v016q"]
[ext_resource type="FontFile" uid="uid://c1t864lnf3r4u" path="res://Assets/Fonts/SF Atarian System.ttf" id="2_gjvvu"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="3_dsd3w"]
[ext_resource type="Texture2D" uid="uid://cnd6wqh5ph826" path="res://Assets/target.png" id="4_wg8i4"]
[ext_resource type="AudioStream" uid="uid://codb35chhoi1s" path="res://Assets/Audio/gameover (1).wav" id="5_4rcj7"]
[ext_resource type="Texture2D" uid="uid://cxwibwrj6xyjr" path="res://Assets/rainbow2.jpg" id="6_s3wof"]
[ext_resource type="Texture2D" uid="uid://plaf22xwoh1n" path="res://Assets/Vector/vector_whiteIcons.svg" id="7_n8f5s"]
[ext_resource type="AudioStream" uid="uid://whbd8wrisd51" path="res://Assets/Audio/Retro Samurai v0_4.mp3" id="8_aidt1"]
[ext_resource type="AudioStream" uid="uid://baw4emi0tamy7" path="res://Assets/Audio/mixkit-winning-a-coin-video-game-2069.wav" id="9_1nyks"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a80pj"]
texture = ExtResource("1_v016q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nqcyk"]
texture = ExtResource("1_v016q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_noset"]
texture = ExtResource("1_v016q")
modulate_color = Color(1, 1, 1, 0.615686)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r0sos"]
texture = ExtResource("1_v016q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hyeam"]
texture = ExtResource("1_v016q")

[sub_resource type="Theme" id="Theme_6gpv6"]
default_font_size = 36
Button/styles/disabled = SubResource("StyleBoxTexture_a80pj")
Button/styles/focus = SubResource("StyleBoxTexture_nqcyk")
Button/styles/hover = SubResource("StyleBoxTexture_noset")
Button/styles/normal = SubResource("StyleBoxTexture_r0sos")
Button/styles/pressed = SubResource("StyleBoxTexture_hyeam")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/fonts/font = ExtResource("2_gjvvu")

[sub_resource type="InputEventKey" id="InputEventKey_tjs48"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_oopgc"]
events = [SubResource("InputEventKey_tjs48")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ck46"]
bg_color = Color(0.109804, 0.0941176, 0.121569, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2kmqs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8e2l3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_irgqf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f0qju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b7x2g"]

[sub_resource type="InputEventKey" id="InputEventKey_17xuk"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="InputEventKey" id="InputEventKey_al0de"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_woovd"]
events = [SubResource("InputEventKey_17xuk"), SubResource("InputEventKey_al0de")]

[sub_resource type="AtlasTexture" id="AtlasTexture_3k25d"]
atlas = ExtResource("7_n8f5s")
region = Rect2(1015, 628, 76, 88)

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_6gpv6")
script = ExtResource("3_dsd3w")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 47.0
grow_horizontal = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -35.0
offset_right = 177.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(175.5, 26.5)
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = ExtResource("2_gjvvu")
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[shake]GAME OVER"
autowrap_mode = 0

[node name="ScoreLoseSummaryLabel" type="Label" parent="GameOverLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = 58.5
offset_right = 235.5
offset_bottom = 80.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 3
text = "SCORE:          "

[node name="HighscoreLoseSummaryLabel" type="Label" parent="GameOverLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = 98.5
offset_right = 234.5
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 3
text = "HIGHSCORE:    "

[node name="WinnerLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -51.0
offset_right = 206.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(205.5, 35)
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/normal_font = ExtResource("2_gjvvu")
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "YOU [wave][rainbow freq=.4 sat=.6 val=1 speed=1.0]WIN!!![/rainbow]"
autowrap_mode = 0

[node name="ScoreWinSummaryLabel" type="Label" parent="WinnerLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = 66.0
offset_right = 228.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 3
text = "SCORE:          "

[node name="HighscoreWinSummaryLabel" type="Label" parent="WinnerLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = 106.0
offset_right = 227.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 3
text = "HIGHSCORE:    "

[node name="HealthBarContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 3.0
offset_right = 145.0
offset_bottom = 53.0
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = -8

[node name="HeartTextureRect" type="TextureRect" parent="HealthBarContainer"]
layout_mode = 2
texture = ExtResource("4_wg8i4")

[node name="HeartTextureRect2" type="TextureRect" parent="HealthBarContainer"]
layout_mode = 2
texture = ExtResource("4_wg8i4")

[node name="HeartTextureRect3" type="TextureRect" parent="HealthBarContainer"]
layout_mode = 2
texture = ExtResource("4_wg8i4")

[node name="QuitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 3.0
offset_right = -12.0
offset_bottom = 43.0
grow_horizontal = 0
shortcut = SubResource("Shortcut_oopgc")
shortcut_in_tooltip = false

[node name="GameOverAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_4rcj7")
volume_db = 3.0

[node name="Menu" type="Panel" parent="."]
unique_name_in_owner = true
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ck46")

[node name="LogoLabel" type="Label" parent="Menu"]
clip_children = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -136.0
offset_right = 277.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gjvvu")
theme_override_font_sizes/font_size = 200
text = "BREAKOUT"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_group_ = true

[node name="LogoTextureRect" type="TextureRect" parent="Menu/LogoLabel"]
layout_mode = 0
offset_left = -55.0
offset_top = -24.0
offset_right = 763.0
offset_bottom = 147.0
texture = ExtResource("6_s3wof")
expand_mode = 1

[node name="RainbowTextureRect" type="TextureRect" parent="Menu"]
modulate = Color(1, 1, 1, 0.788235)
layout_mode = 0
offset_left = -112.0
offset_top = 641.0
offset_right = 1038.0
offset_bottom = 681.0
rotation = -0.352828
texture = ExtResource("6_s3wof")
expand_mode = 3

[node name="StartButton" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 25.5
offset_right = 79.0
offset_bottom = 183.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.705882)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 0.705882)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_gjvvu")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_2kmqs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8e2l3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_irgqf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f0qju")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b7x2g")
shortcut = SubResource("Shortcut_woovd")
shortcut_in_tooltip = false
text = "START"
icon = SubResource("AtlasTexture_3k25d")
autowrap_mode = 3
icon_alignment = 1
vertical_icon_alignment = 0

[node name="HighscoreLabel" type="Label" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 79.0
offset_top = -212.0
offset_right = 390.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
rotation = -0.353646
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.109804, 0.0941176, 0.121569, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("2_gjvvu")
theme_override_font_sizes/font_size = 28
text = "HIGHSCORE: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -137.0
offset_top = -42.0
offset_right = 137.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Press 'ESC' to Exit or Click on    "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Menu/InfoLabel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 127.0
offset_top = -46.0
offset_right = 165.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_v016q")
expand_mode = 1

[node name="MenuAudioStreamPlayer" type="AudioStreamPlayer" parent="Menu"]
unique_name_in_owner = true
stream = ExtResource("8_aidt1")
volume_db = -5.0
autoplay = true
parameters/looping = true

[node name="StartAudioStreamPlayer" type="AudioStreamPlayer" parent="Menu"]
unique_name_in_owner = true
stream = ExtResource("9_1nyks")
volume_db = -10.0
